# athena-infinite-loop

./: README.md
backend/: .gitignore  langgraph.json  pyproject.toml
backend/backend/: agent.py  demo.py  email_agent.py  joke_agent.py
backend/backend/ai_researcher/: agent.py  demo.py  extract.py  search.py  state.py  steps.py  summarize.py
backend/backend/ai_researcher_old/: agent.py  extract.py  summarize.py
my-app/: package.json  pnpm-lock.yaml
my-app/src/app/: CustomMessages.tsx  page.tsx
my-app/src/app/api/copilotkit/: route.ts
